--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,27 @@
-#image {
+/*
+#sprite {
+
     height: 48px;
     width: 48px;
-    
     background: url('../assets/gunner/CHARACTER_SPRITES/Green/Gunner_Green_Run.png') 0px 0px;
   }
 
-
+  #gun_man {
+    position: absolute;
+    left: 120px;
+    top: 120px;
+  }
+*/
+p.player {
+    position: absolute;
+    height: 48px;
+    width: 48px;
+    top: 80px;
+    left: 100px;
+    background: url('../assets/gunner/CHARACTER_SPRITES/Green/Gunner_Green_Run.png') 0px 0px;
+    /*
+    width: 200px;
+    height: 100px;
+    border: 3px solid #73AD21;
+    */
+  }
