--- a/css/index.css
+++ b/css/index.css
@@ -12,16 +12,29 @@
     top: 120px;
   }
 */
-p.player {
-    position: absolute;
-    height: 48px;
-    width: 48px;
-    top: 80px;
-    left: 100px;
-    background: url('../assets/gunner/CHARACTER_SPRITES/Green/Gunner_Green_Run.png') 0px 0px;
-    /*
-    width: 200px;
-    height: 100px;
-    border: 3px solid #73AD21;
-    */
-  }
+p.playerOne {
+  position: absolute;
+  height: 48px;
+  width: 48px;
+  top: 80px;
+  left: 100px;
+  background: url('../assets/gunner/CHARACTER_SPRITES/Green/Gunner_Green_Run.png') 0px 0px;
+  /*
+  width: 200px;
+  height: 100px;
+  border: 3px solid #73AD21;
+  */
+}
+p.playerTwo {
+  position: absolute;
+  height: 48px;
+  width: 48px;
+  top: 80px;
+  left: 240px;
+  background: url('../assets/gunner/CHARACTER_SPRITES/Yellow/Gunner_Yellow_Run.png') 0px 0px;
+  /*
+  width: 200px;
+  height: 100px;
+  border: 3px solid #73AD21;
+  */
+}
